--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
@@ -52,12 +54,14 @@
     "eslint": "^7.11.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
-    "lint-staged": "^12.1.7",
+    "lint-staged": "^12.3.1",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
-    "*.{js,jsx,css,md,scss}": "prettier --write"
+    "*.{js,jsx,css,md,scss}": "prettier --write",
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
